Changes from 3.4.2 to 3.4.3

New features:

- Raster graphics modes now use correctly scaled penwidths instead of 
  crude approximations (Andrew J. Bird, using a 'wide line Bresenham' 
  algorithm by Alan Murphy of IBM that was released into the public 
  domain through an IBM Technical Bulletin)

Bug fixes:

- hp2xx now ignores SC commands with invalid parameters 
  (original patch by Slavek Banko)
- AC support in 3.4.2 slowed down the polygon fill code
- raster mode was allocating a big 8 bit per pixel memory
  buffer even when the pen data would fit in 4bpp
- PDF output would fold the image in some cases (Jay Dawes)
- The RO/IW fix in 3.4.2 broke other cases, fixed again.
- The DXF header was a bit too minimalistic for some readers
  (Francisco Doubrawa Filho)
- Dots drawn for PUPDPU sequences were not clipped by IW

Changes from 3.4.1 to 3.4.2

- Added support for the AC (fill pattern anchor corner) command
- Added support for the CT (chord tolerance) command
- Added color support in SVG output mode
- Added output module for JPG images (requires libjpeg)

Bug fixes:

- SVG output mode could not be selected on the commandline
- PDF and EPS modes were not always generating penwidth commands on pen changes
- Polygon mode was influencing the overall pen up/down state
- PM1 immediately after PM was not setting the new starting point correctly
- FT instructions did not store/recall hatch spacing and angle correctly
- X11 preview always used black for pen 1
- Polygon fill algorithm did not handle parallel bounding lines correctly,
  and could draw lines beyond the limits of the polygon in some cases.
- the commandline interpreter now handles mis-spelled or unknown long
  options gracefully (Serge Ivanchenko)
- PDF output was only about 1/3 the intended size
- handling of RO/IW was broken (again) for the unscaled case (no SC)
- PNG output was still using a fixed eight pen palette
- raster modes were limited to 15 pens due to restrictions of the internal